Ármin elment dolgozni

--- a/11_x_CraftingTable/11_x_CraftingTable.csproj
+++ b/11_x_CraftingTable/11_x_CraftingTable.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="fileManager.cs" />
+    <Compile Include="receptek.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
